Deploy preview for PR 51 🛫

--- a/pr-preview/pr-51/advanced_topics.html
+++ b/pr-preview/pr-51/advanced_topics.html
@@ -813,7 +813,7 @@ Number of Fisher Scoring iterations: 2</code></pre>
 <div class="cell-output-display">
 <div data-pagedtable="false">
   <script data-pagedtable-source="" type="application/json">
-{"columns":[{"label":["location"],"name":[1],"type":["chr"],"align":["left"]},{"label":["metric"],"name":[2],"type":["chr"],"align":["left"]},{"label":["value"],"name":[3],"type":["int"],"align":["right"]}],"data":[{"1":"al","2":"max_commute","3":"184"},{"1":"az","2":"max_commute","3":"184"},{"1":"ca","2":"max_commute","3":"142"},{"1":"wa","2":"max_commute","3":"152"},{"1":"wy","2":"max_commute","3":"176"},{"1":"ar","2":"max_commute","3":"186"},{"1":"wi","2":"max_commute","3":"177"},{"1":"ak","2":"max_commute","3":"194"},{"1":"wv","2":"max_commute","3":"193"},{"1":"al","2":"min_commute","3":"1"},{"1":"ca","2":"min_commute","3":"1"},{"1":"wa","2":"min_commute","3":"1"},{"1":"wi","2":"min_commute","3":"1"},{"1":"wy","2":"min_commute","3":"1"},{"1":"ak","2":"min_commute","3":"1"},{"1":"ar","2":"min_commute","3":"1"},{"1":"az","2":"min_commute","3":"1"},{"1":"wv","2":"min_commute","3":"1"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
+{"columns":[{"label":["location"],"name":[1],"type":["chr"],"align":["left"]},{"label":["metric"],"name":[2],"type":["chr"],"align":["left"]},{"label":["value"],"name":[3],"type":["int"],"align":["right"]}],"data":[{"1":"al","2":"max_commute","3":"184"},{"1":"ar","2":"max_commute","3":"186"},{"1":"ca","2":"max_commute","3":"142"},{"1":"wa","2":"max_commute","3":"152"},{"1":"wi","2":"max_commute","3":"177"},{"1":"wy","2":"max_commute","3":"176"},{"1":"ak","2":"max_commute","3":"194"},{"1":"az","2":"max_commute","3":"184"},{"1":"wv","2":"max_commute","3":"193"},{"1":"al","2":"min_commute","3":"1"},{"1":"ca","2":"min_commute","3":"1"},{"1":"wy","2":"min_commute","3":"1"},{"1":"ak","2":"min_commute","3":"1"},{"1":"wa","2":"min_commute","3":"1"},{"1":"az","2":"min_commute","3":"1"},{"1":"wi","2":"min_commute","3":"1"},{"1":"wv","2":"min_commute","3":"1"},{"1":"ar","2":"min_commute","3":"1"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
   </script>
 </div>
 </div>
@@ -1092,7 +1092,7 @@ $creator$version
 <div class="cell-output-display">
 <div data-pagedtable="false">
   <script data-pagedtable-source="" type="application/json">
-{"columns":[{"label":["location"],"name":[1],"type":["chr"],"align":["left"]},{"label":["PUMA"],"name":[2],"type":["chr"],"align":["left"]},{"label":["year"],"name":[3],"type":["int"],"align":["right"]},{"label":["language"],"name":[4],"type":["chr"],"align":["left"]},{"label":["n_people"],"name":[5],"type":["int"],"align":["right"]},{"label":["prop_speaker"],"name":[6],"type":["dbl"],"align":["right"]}],"data":[{"1":"ar","2":"01700","3":"2018","4":"spanish","5":"1317","6":"0.44493243"},{"1":"ar","2":"01700","3":"2018","4":"arabic","5":"132","6":"0.04459459"},{"1":"ar","2":"01700","3":"2018","4":"french","5":"378","6":"0.12770270"},{"1":"ar","2":"01800","3":"2018","4":"spanish","5":"5114","6":"0.87433749"},{"1":"ar","2":"01300","3":"2018","4":"spanish","5":"10770","6":"0.88083749"},{"1":"ar","2":"00800","3":"2018","4":"spanish","5":"2939","6":"0.71560750"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
+{"columns":[{"label":["location"],"name":[1],"type":["chr"],"align":["left"]},{"label":["PUMA"],"name":[2],"type":["chr"],"align":["left"]},{"label":["year"],"name":[3],"type":["int"],"align":["right"]},{"label":["language"],"name":[4],"type":["chr"],"align":["left"]},{"label":["n_people"],"name":[5],"type":["int"],"align":["right"]},{"label":["prop_speaker"],"name":[6],"type":["dbl"],"align":["right"]}],"data":[{"1":"az","2":"00300","3":"2018","4":"navajo","5":"55285","6":"0.7331839"},{"1":"az","2":"00900","3":"2018","4":"spanish","5":"60729","6":"0.9345511"},{"1":"az","2":"00106","3":"2018","4":"spanish","5":"22221","6":"0.6669368"},{"1":"az","2":"00202","3":"2018","4":"spanish","5":"32016","6":"0.8521012"},{"1":"az","2":"00103","3":"2018","4":"spanish","5":"38642","6":"0.8925280"},{"1":"az","2":"00108","3":"2018","4":"spanish","5":"12301","6":"0.5007531"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
   </script>
 </div>
 </div>
@@ -1162,7 +1162,7 @@ $creator$version
 </div>
 </div>
 </div>
-<p>We can clearly see some patterns of migration: French is spoken in parts of northern Maine and Louisiana; German is spoken in the midwest, especially the upper midwest, and intermountain west.</p>
+<p>We can clearly see some patterns of migration: French is spoken in parts of northern Maine and Louisiana; German is spoken in the midwest, especially in the upper midwest and intermountain west.</p>
 <div class="callout callout-style-default callout-tip callout-titled">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
